# jetson_car

./: .gitignore  HARDWARE.md  README.MD  car_path_follow.ipynb  quntic-planning.ipynb
RCWin32/: RCWin32.sln
RCWin32/RCWin32/: Form1.Designer.cs  Form1.cs  Form1.resx  Joystick.cs  JoystickDrawer.cs  KeyboardJoystick.cs  Program.cs  RCWin32.csproj  UdpSender.cs
hardware/: README.md
jetson_car/: .jetson_ros.sh  CMakeLists.txt  README.md  jetson_ros.sh  package.xml
jetson_car/launch/: gps_test_host.launch  gps_test_jetson.launch  joystick.launch  joystick_host.launch  joystick_jetson.launch  joystick_teleop.launch  joystick_web.launch  log_only.launch  obstacles.launch  path_move.launch  path_move_host.launch  path_move_jetson.launch  path_move_teleop.launch  path_mover.launch  slam.launch
jetson_car/launch/include/: _gps_converter.launch  _logger.launch  _path_publisher.launch
jetson_car/msg/: CarPath.msg  CarState.msg  DigitalMap.msg
jetson_car/path_logs/: 2018.10.16_21.02.49.txt
jetson_car/rviz/: odom_gps.mvc  path.rviz
jetson_car/rviz/jetson_car.rviz/: jetson_car.rviz  persistent_settings
jetson_car/scripts/: circle_mover_node.py  diff.py  joy_to_motors_node.py  motion_planner_node.py  path_drawer_node.py  path_pub_node.py  simple_odologger.py  stream_camera.sh  test.py  view_stream.sh  web_control_server.sh
jetson_car/scripts/motion_planner/: frenet.py  motion_planner_node.py  msg_helpers.py  quintic.py  rviz_helpers.py  trajectory.py
jetson_car/scripts/path_mover/: intersections_finder.py  msg_helpers.py  path_mover_node.py  rviz_helpers.py
jetson_car/src/: motors_driver_node.cpp  odometry_logger_node.cpp
jetson_car/src/mapper/: GridCoord.h  mapper.cpp  mapper_node.cpp
jetson_car/src/mapper/ransac_segmentation/: RANSACSegmentation.cpp  RANSACSegmentation.h
jetson_car/src/motion_planner/: motion_planner_node.cpp
jetson_car/src/path_planner/: path_planner_node.cpp
jetson_car_ros/: CMakeLists.txt  package.xml
jetson_car_ros/launch/: joystick.launch  path_move.launch
jetson_car_ros/scripts/: circle_move.py  joy_to_motors.py  path_move.py  path_pub.py  stream_camera.sh
jetson_car_ros/scripts/path_mover/: intersections_finder.py  msg_helpers.py  rviz_helpers.py
jetson_car_ros/src/: motors_driver.cpp
jetson_car_teleop/: CMakeLists.txt  package.xml
jetson_car_teleop/launch/: joystick_teleop.launch  path_move.launch
jetson_car_teleop/rviz/: path.rviz
jetson_car_teleop/scripts/: odometry_logger.py  view_stream.sh
stm32_firmware/: jetson_car.ioc  jetson_car.uvguix.MarkovAlex  jetson_car.uvoptx  jetson_car.uvprojx
stm32_firmware/Listings/: jetson_car.map  startup_stm32f10x_md.lst
stm32_firmware/Objects/: gpio.crf  gpio.d  gpio_stm32f10x.crf  gpio_stm32f10x.d  jetson_car.axf  jetson_car.build_log.htm  jetson_car.htm  main.crf  (+21 more)
web_control/: index.html  joy.js  publish.js  run_server.sh
(+20 files in other folders)
